--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
