--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gsn_new",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://karthi3002.github.io/GSN1",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -14,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "gh-pages": "^6.3.0",
     "nodemailer": "^7.0.3",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
