--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.3",
+    "swiper": "^11.2.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
